Acquire EXCLUSIVE lock while marking segments as used